# packer-ubuntu-desktop

./: .blueprint.json  .cspell.json  .gitignore  .gitlab-ci.yml  .gitmodules  .lintstagedrc  .start.sh  .update.sh  .variables.json  CONTRIBUTING.md  LICENSE  README.md  Taskfile.yml  Vagrantfile  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  template.json  update.sh
.config/: common-keywords.json  requirements.txt  variables.json
.config/docs/: blueprint-contributing.md  blueprint-readme-server.md  variables.json
.config/docs/readme/: contributing-details.md  creating-box.md  overview.md  quick-description.md  quick-start.md  requirements.md  subheader.md  updating.md
.config/taskfiles/common/: Taskfile-update.yml
.config/taskfiles/fix/: Taskfile.yml
.config/taskfiles/git/: Taskfile-hook.yml
.config/taskfiles/install/: Taskfile-software.yml  Taskfile.yml
.config/taskfiles/lint/: Taskfile.yml
.config/taskfiles/packer/: Taskfile-build.yml  Taskfile-update.yml  Taskfile.yml
.config/taskfiles/web/: Taskfile-ionic.yml
.github/ISSUE_TEMPLATE/: BugReport.yml  FeatureRequest.yml  SupportRequest.yml
.task/checksum/: common-update-contributing  common-update-readme  git-github-update-meta  install-modules-local  install-modules-local-lockfiles  install-python-requirements-poetry  packer-update-descriptions  packer-update-variables
docs/: CONTRIBUTING.md
http/: meta-data  preseed-hyperv.cfg  preseed.cfg  user-data
local/: package-lock.json
scripts/: cleanup.custom.sh  cleanup.sh  cleanup.symlink.sh  desktop.custom.sh  desktop.sh  hyperv.sh  hyperv.symlink.sh  metadata.sh  minimize.sh  motd.sh  networking.sh  parallels.sh  sshd.sh  sudoers.sh  update.sh  vagrant.sh  virtualbox.sh  vmware.sh
