[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]

[tool.poetry]
authors = ["Brian Zalewski <brian@megabyte.space>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Other",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: Desktop Environment",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities"
]
description = "An automated Ubuntu Desktop (currently, version 21.10) Packer project that builds boxes using the latest Ubuntu Live Server release"
documentation = "https://megabyte.space/docs/common/packer"
homepage = "https://megabyte.space"
include = ["docs/CHANGELOG.md", "LICENSE"]
keywords = [
  "accelerated",
  "compressed",
  "desktop",
  "kvm",
  "mblabs",
  "megabytelabs",
  "optimized",
  "packer",
  "parallels",
  "professormanhattan",
  "qemu",
  "ubuntu-desktop",
  "virtualbox",
  "vmware",
  "washingtondc",
  "workstation"
]
license = "MIT"
name = "ubuntu-desktop"
readme = "README.md"
repository = "https://github.com/ProfessorManhattan/packer-ubuntu-desktop"
version = "1.0.0"

[tool.poetry.dependencies]
latestos = "*"
python = ">=3.10.0,<4.0.0"

[tool.poetry.dependencies.pip]
optional = true
version = "^21.3.0"

[tool.poetry.dependencies.setuptools]
optional = true
version = "^58.2.0"

[tool.poetry.dependencies.twine]
optional = true
version = "^3.8.0"

[tool.poetry.dependencies.wheel]
optional = true
version = "^0.37.1"

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
toml-sort = "^0.19.0"
yamllint = "^1.26.3"

[tool.poetry.extras]
semantic = ["pip", "setuptools", "twine", "wheel"]

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/packer/ubuntu-desktop/-/issues"
GitHub = "https://github.com/ProfessorManhattan/packer-ubuntu-desktop"
GitLab = "https://gitlab.com/megabyte-labs/packer/ubuntu-desktop"
"Give Directly" = "https://givedirectly.org"
"Open Collective" = "https://opencollective.com/megabytelabs"
Patreon = "https://www.patreon.com/ProfessorManhattan"
